[package]
name = "sos2"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.*"
multiboot2 = "0.3.*"
spin = "0.4.*"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
